--- a/fixtures/vcr_cassettes/alias_query/2.yml
+++ b/fixtures/vcr_cassettes/alias_query/2.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -25,7 +25,7 @@ http_interactions:
       Content-Disposition:
       - attachment
       Etag:
-      - ! '"UehxEFcjzflMW6jGml15RaD240Q/MFkSnY1-vw88-b4GMSZJC-vsPTU"'
+      - '"UehxEFcjzflMW6jGml15RaD240Q/MFkSnY1-vw88-b4GMSZJC-vsPTU"'
       Vary:
       - Origin
       - X-Origin
@@ -45,7 +45,59 @@ http_interactions:
       - 443:quic,p=0.02
     body:
       encoding: US-ASCII
-      string: ! '{"status":"200 OK","result":[],"cost":4,"hits":0}'
+      string: '{"status":"200 OK","result":[],"cost":4,"hits":0}'
     http_version: 
   recorded_at: Sat, 22 Nov 2014 22:49:39 GMT
+- request:
+    method: get
+    uri: https://www.googleapis.com/freebase/v1/search?lang=en&limit=10&query=really%20wierd%20unknown%20string%20no%20one%20uses
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Expires:
+      - Tue, 19 Apr 2016 01:19:46 GMT
+      Date:
+      - Tue, 19 Apr 2016 01:19:46 GMT
+      Cache-Control:
+      - private, max-age=0, must-revalidate, no-transform
+      Content-Disposition:
+      - attachment
+      Etag:
+      - '"ZMs_dQk8-NwPM_1h7uEtP52QMBs/MFkSnY1-vw88-b4GMSZJC-vsPTU"'
+      Vary:
+      - Origin
+      - X-Origin
+      Content-Type:
+      - application/json; charset=UTF-8
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      Content-Length:
+      - '49'
+      Server:
+      - GSE
+      Alternate-Protocol:
+      - 443:quic
+      Alt-Svc:
+      - quic=":443"; ma=2592000; v="32,31,30,29,28,27,26,25"
+    body:
+      encoding: UTF-8
+      string: '{"status":"200 OK","result":[],"cost":4,"hits":0}'
+    http_version: 
+  recorded_at: Tue, 19 Apr 2016 01:19:46 GMT
 recorded_with: VCR 2.9.3
